[package]
name = "faf"
version = "0.3.0"
edition = "2021"
authors = ["wolfejam <wolfejam@faf.one>"]
description = "FAF (Foundational AI-context Format) — Project DNA for any AI. IANA-registered application/vnd.faf+yaml."
license = "MIT"
repository = "https://github.com/Wolfe-Jam/faf"
homepage = "https://faf.one"
documentation = "https://docs.rs/faf"
readme = "README.md"
keywords = ["faf", "ai-context", "project-dna", "yaml", "mcp"]
categories = ["development-tools", "config", "parser-implementations"]

[dependencies]
faf-rust-sdk = "1.3"

[features]
default = ["sdk"]
sdk = []
radio = ["dep:faf-radio-rust"]
axum = ["faf-rust-sdk/axum"]

[dependencies.faf-radio-rust]
version = "0.2"
optional = true
